--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
-  <link rel="stylesheet" href="./vendor/normalize.css">
     <title>Путешествия по России</title>
 </head>
 <body>
@@ -25,8 +24,8 @@
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <img class="lead__image" src="./images/lead-polka.jpg" alt="Женщина спит на нижней полке вагоне-плацкарте">
-        <p class="lead__caption">ваша полка-верхняя</p>
+        <img class="lead__image" src="./images/lead-polka.jpg" alt="Купе в вагоне поезда">
+        <p class="lead__caption">ваша полка - верхняя</p>
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -39,29 +38,29 @@
             <span class="intro__list-accent">Объектов природного наследия ЮНЕСКО</span> 12
           </li>
           <li>
-            <span class="intro-list-accent">Объектов культурного наследия ЮНЕСКО</span> 16
+            <span class="intro__list-accent">Объектов культурного наследия ЮНЕСКО</span> 16
           </li>
           <li>
-            <span class="intro-list-accent">Природных заповедников</span> 105
+            <span class="intro__list-accent">Природных заповедников</span> 105
           </li>
           <li>
-            <span class="intro-list-accent">Аэропортов</span> 241
+            <span class="intro__list-accent">Аэропортов</span> 241
           </li>
         </ul>
       </section>
-        <section class="photo-grid">
-          <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="едем на море">
-          <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="горы">
-          <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="поля с собакой">
-          <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="лесистый склон в тумане">
-          <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="прозрачный лёд Байкала">
-          <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="побережье">
-          <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="горные пики">
-          <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="что это">
-          <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="долина">
-          <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="горное плато">
-          <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="прибрежный утёс">
-          <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="перевал в облаках">
+      <section class="photo-grid">
+        <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Вид из окна поезда">
+        <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид на снежные вершины гор">
+        <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Собака на сене">
+        <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Вид на хвойный лес в горах в тумане">
+        <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Прозрачный лёд Байкала">
+        <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Вид на Байкал">
+        <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Гора Эльбрус">
+        <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Знак пешеходного перехода">
+        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Вид на горы Камчатки">
+        <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Гора на Камчатке">
+        <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Вид на горное Побережье Байкала">
+        <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Горный хребет Ергаки">
       </section>
       <section class="places">
         <article class="place">
@@ -138,16 +137,16 @@
         </a>
       </section>
     </main>
-        <footer class="footer">
-          <nav class="footer__links">
-            <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-            <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-            <a class="footer__link" href="https://rasp.yandex.ru/">Расписание</a>
-            <a class="footer__link" href="https://calendar.yandex.ru/">Календарь</a>
-            <a class="footer__link" href="https://travel.yandex.ru/">Путешествия</a>
-          </nav>
-          <p class="footer__copyright">© 2023. Газизянов Фандас</p>
-        </footer>
+    <footer class="footer">
+      <nav class="footer__links">
+        <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+        <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+        <a class="footer__link" href="https://rasp.yandex.ru/">Расписание</a>
+        <a class="footer__link" href="https://calendar.yandex.ru/">Календарь</a>
+        <a class="footer__link" href="https://travel.yandex.ru/">Путешествия</a>
+      </nav>
+      <p class="footer__copyright">© 2023. Газизянов Фандас</p>
+    </footer>
   </div>
 </body>
 </html>
